--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,7 @@ main:
         
   - title: "Substack"
     url: 'https://aeroles.substack.com/'
+    target: '_blank'
     
   - title: "CV"
     url: /cv/
