--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google_site_verification : 023e33ba9bb522c3
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
