--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,7 @@ author:
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
+  substack         : "https://aeroles.substack.com/"
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
