--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,19 +7,6 @@
 main:
   - title: "Publications"
     url: /publications/
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
+   
   - title: "Substack"
-    url: 'https://aeroles.substack.com/'
-    target: '_blank'
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+    url: /substack/
