--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,8 @@ publication_category:
     title: 'Academic Papers'
   presentations:
     title: 'Presentations'
+  manuals:
+    title: 'Manuals'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
